--- a/css/styles.css
+++ b/css/styles.css
@@ -120,13 +120,13 @@ img {
   top: 0;
   left: 0;
   z-index: var(--z-fixed);
-  background-color: #000000;
+  background-color: #3ba8e0;
   z-index: 2000;
 }
 
 
 .nav {
-  height: var(--header-height) +50px;
+  height: var(--header-height) ;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -187,7 +187,7 @@ img {
 }
 
 .nav__link {
-  color: #ff9e9d;
+  color: #ffffff;
 }
 
 .nav__link:hover {
